# mc-server

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-test.yml
config/: .cmc.template  crontab.template  logrotate
src/cmcserver/: _version.py  backup.py  configuration.py  lib.py  main.py  mca.py  server.py
tests/cmcserver/: test_main.py  test_mca.py
